# benny-watchman

./: .gitignore  AGENT.md  BRAINSTORMING.md  CLAUDE.md  DESIGN.md  Makefile  README.md  TODO.md  main.py  pyproject.toml
.agent/skills/sync-skill/: SKILL.md
.agent/workflows/: sync-skill.md
.gemini/skills/: sync-skill
.github/workflows/: integration-test.yml  lint.yml  test.yml
pm/: AGENT_DESIGN.md  DESIGN.md  MILESTONES.md  STATUS.md  TODO.md
runbooks/: generic.md
src/: config.py  models.py  orchestrator.py  router.py  runbook_registry.py
src/agents/: analyst_agent.py  base.py  base_agent.py  data_agent.py  data_sqlite_agent.py  detection_engineer_agent.py  enrichment_agent.py  reviewer_agent.py  threat_hunter_agent.py
src/api/: app.py
src/api/routes/: hunt.py  investigate.py  investigations.py  reports.py  runbooks.py
src/api/schemas/: investigate_request.py
src/engines/: __init__.py  base.py  sqlite.py
src/mcp/: __init__.py
src/persistence/: base.py  clickhouse.py  factory.py  sqlite.py
src/router/: router.py
src/runbook/: model.py  registry.py
src/schemas/: alert.py  data.py  data_result.py  enrichment_result.py  findings.py  incident_report.py  investigation.py  report.py  runbook.py
src/tools/data/: clickhouse.py
src/tools/enrichment/: idp.py  virustotal.py  web.py
src/utils/: observability.py
tests/: conftest.py
tests/api/: test_routes.py
tests/e2e/: test_investigation.py
tests/harness/: judge.py  main.py  schema.py
tests/harness/cases/: base_case.py  case_brute_force.py
tests/unittests/: test_models.py
(+9 files in other folders)
