[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "ai-soc-analyst"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "logfire[pydantic-ai]>=4.28.0",
    "pydantic-ai[all]>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests requiring a real LLM API key (MODEL_API_KEY)"]
